syntax = "proto3";

package frontend.cart;

import "api.proto";
import "frontend/common.proto";

option go_package = "/frontend/cart";

service CartService {
    rpc AddCartItem(AddCartItemReq) returns (common.Empty) {
        option (api.post) = "/cart";
    }
    rpc GetCart(common.Empty) returns (common.Empty) {
        option (api.get) = "/cart";
    }
}

message AddCartItemReq {
    uint32 product_id = 1 [(api.form) = "productId"];
    int32 product_num = 2 [(api.form) = "productNum"];
}




